--- a/TP7 WEB BEHANCE/index.html
+++ b/TP7 WEB BEHANCE/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="container-img">
-        <img src="/img/benjamin-voros-StFUwkNsvcY-unsplash.jpg" />
+        <img src="/img/img-main.jpg" />
       </div>
     </main>
 
@@ -44,7 +44,7 @@
 
     <section class="section1">
       <div class="section1-img">
-        <img src="/img/wallpaperflare.com_wallpaper.jpg" alt="" />
+        <img src="/img/img-setion-1.jpg" alt="" />
       </div>
       <div class="contenedor-parrafo1">
         <h1 class="titulo-section1">
